HVAC Backup 2/objects/Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Error_Message__c</fullName>
        <label>Custom Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_At__c</fullName>
        <label>Logged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPS_Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Source__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>SAP User</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bulk_Product_Register_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>BulkRegistrationResponseHandler</value>
        </filters>
        <label>Bulk Product Register Logs</label>
    </listViews>
    <listViews>
        <fullName>Notification_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>contains</operation>
            <value>TemplateParamsUtil</value>
        </filters>
        <label>Notification Logs</label>
    </listViews>
    <listViews>
        <fullName>Scan_Asset_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <columns>Line_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>ProductRegistration-ScanAsset</value>
        </filters>
        <label>Scan Asset Logs</label>
    </listViews>
    <nameField>
        <displayFormat>ErrorLog-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>